src/command/snapshots/dss__command__lexer__tests__cmd_parsing_of_semicolon_logical_and.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word,
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "-la",
        token_type: Word,
        line: 0,
        range: (
            3,
            5,
        ),
    },
    Token {
        lexeme: "&&",
        token_type: Operators(
            AndIf,
        ),
        line: 0,
        range: (
            7,
            8,
        ),
    },
    Token {
        lexeme: "echo",
        token_type: Word,
        line: 0,
        range: (
            10,
            13,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word,
        line: 0,
        range: (
            15,
            17,
        ),
    },
]
