src/command/snapshots/dss__command__lexer__tests__lexing_of_backslash.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "echo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            3,
        ),
    },
    Token {
        lexeme: "\\",
        token_type: Backslash,
        line: 0,
        range: (
            5,
            5,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word(
            Text,
        ),
        line: 1,
        range: (
            0,
            2,
        ),
    },
]
