src/command/snapshots/dss__command__lexer__tests__lexing_of_bg_process_with_ampersand.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ping",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            3,
        ),
    },
    Token {
        lexeme: "google.com",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            5,
            14,
        ),
    },
    Token {
        lexeme: "&",
        token_type: Operator(
            And,
        ),
        line: 0,
        range: (
            16,
            16,
        ),
    },
]
