src/command/snapshots/dss__command__lexer__tests__lexing_of_cmd_cd_dot_dot.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "cd",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "..",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            4,
        ),
    },
]
