src/command/snapshots/dss__command__lexer__tests__lexing_of_cmd_with_keyword.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "-la",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            5,
        ),
    },
    Token {
        lexeme: "&&",
        token_type: Operator(
            AndIf,
        ),
        line: 0,
        range: (
            6,
            7,
        ),
    },
    Token {
        lexeme: "exit",
        token_type: Word(
            Keyword(
                Exit,
            ),
        ),
        line: 0,
        range: (
            9,
            12,
        ),
    },
]
