src/command/snapshots/dss__command__lexer__tests__lexing_of_cmd_with_unqualified_path.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "./ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            3,
        ),
    },
]
