src/command/snapshots/dss__command__lexer__tests__lexing_of_pipe_op.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "echo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            3,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            5,
            7,
        ),
    },
    Token {
        lexeme: "|",
        token_type: Operator(
            Or,
        ),
        line: 0,
        range: (
            9,
            9,
        ),
    },
    Token {
        lexeme: "cat",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            11,
            13,
        ),
    },
    Token {
        lexeme: "|",
        token_type: Operator(
            Or,
        ),
        line: 0,
        range: (
            15,
            15,
        ),
    },
    Token {
        lexeme: "cat",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            17,
            19,
        ),
    },
]
