src/command/snapshots/dss__command__lexer__tests__lexing_of_pipe_op_with_redirection_without_fd.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "-6",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            4,
        ),
    },
    Token {
        lexeme: ">",
        token_type: Operator(
            RightPointyBracket,
        ),
        line: 0,
        range: (
            5,
            5,
        ),
    },
    Token {
        lexeme: "file.txt",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            7,
            14,
        ),
    },
]
